--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "next": "14.1.0",
     "react": "^18",
     "react-bootstrap-icons": "^1.10.3",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-drag-reorder": "^1.2.0",
+    "react-draggable": "^4.4.6",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
