--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "bootstrap-icons": "^1.11.3",
     "next": "14.1.0",
     "react": "^18",
@@ -16,6 +17,7 @@
     "react-dom": "^18",
     "react-drag-reorder": "^1.2.0",
     "react-draggable": "^4.4.6",
+    "react-redux": "^9.1.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
